# network_framework

./: .gitignore  CMakeLists.txt  Makefile  README.md  build  src.rar
backup/db/: auth.sql
cmake/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  Makefile  compile  compile.sh  remake  remake.sh
demo/: CMakeLists.txt  demo.cpp
demo/testAsio/: demo.cpp  makefile
demo/testStack/: StackTrace.cpp  StackTrace.h  demo  main.cpp  makefile
dep/: .gitignore  boost_libs.py  boost_libs.sh  compile_libs  compile_libs.py  compile_libs.sh  cryptopp_libs.py  cryptopp_libs.sh  glog_libs.py  glog_libs.sh  install_libs.sh  mysql_libs.py  mysql_libs.sh  redis_libs.py  redis_libs.sh
dep/boost/: README.TXT
dep/boost/lib/: libboost_atomic.so.1.57.0  libboost_atomic.so.1.60.0  libboost_chrono.so.1.57.0  libboost_chrono.so.1.60.0  libboost_container.so.1.57.0  libboost_container.so.1.60.0  libboost_context.so.1.57.0  libboost_context.so.1.60.0  libboost_coroutine.so.1.57.0  libboost_coroutine.so.1.60.0  libboost_date_time.so.1.57.0  libboost_date_time.so.1.60.0  libboost_filesystem.so.1.57.0  libboost_filesystem.so.1.60.0  libboost_graph.so.1.57.0  libboost_graph.so.1.60.0  libboost_iostreams.so.1.57.0  libboost_iostreams.so.1.60.0  libboost_locale.so.1.57.0  libboost_locale.so.1.60.0  libboost_log.so.1.57.0  libboost_log.so.1.60.0  libboost_log_setup.so.1.57.0  libboost_log_setup.so.1.60.0  libboost_math_c99.so.1.57.0  libboost_math_c99.so.1.60.0  libboost_math_c99f.so.1.57.0  libboost_math_c99f.so.1.60.0  libboost_math_c99l.so.1.57.0  libboost_math_c99l.so.1.60.0  libboost_math_tr1.so.1.57.0  libboost_math_tr1.so.1.60.0  libboost_math_tr1f.so.1.57.0  libboost_math_tr1f.so.1.60.0  libboost_math_tr1l.so.1.57.0  libboost_math_tr1l.so.1.60.0  libboost_prg_exec_monitor.so.1.57.0  libboost_prg_exec_monitor.so.1.60.0  libboost_program_options.so.1.57.0  libboost_program_options.so.1.60.0  (+23 more)
dep/glog/: README.TXT
dep/glog-0.3.3/: Makefile  config.status  demangle_unittest  libglog.pc  libtool  logging_striptest0  logging_striptest10  logging_striptest2  logging_unittest  signalhandler_unittest  stacktrace_unittest  stl_logging_unittest  symbolize_unittest  utilities_unittest
dep/glog-0.3.3/.deps/: demangle_unittest-demangle_unittest.Po  libglog_la-demangle.Plo  libglog_la-logging.Plo  libglog_la-raw_logging.Plo  libglog_la-signalhandler.Plo  libglog_la-symbolize.Plo  libglog_la-utilities.Plo  libglog_la-vlog_is_on.Plo  logging_striptest0-logging_striptest_main.Po  logging_striptest10-logging_striptest10.Po  logging_striptest2-logging_striptest2.Po  logging_unittest-logging_unittest.Po  signalhandler_unittest-signalhandler_unittest.Po  stacktrace_unittest-stacktrace_unittest.Po  stl_logging_unittest-stl_logging_unittest.Po  symbolize_unittest-symbolize_unittest.Po  utilities_unittest-utilities_unittest.Po
dep/glog-0.3.3/.libs/: demangle_unittest  libglog.so.0.0.0  logging_striptest0  logging_striptest10  logging_striptest2  logging_unittest  signalhandler_unittest  stacktrace_unittest  stl_logging_unittest  symbolize_unittest  utilities_unittest
dep/glog-0.3.3/src/: logging.cc  utilities.cc  utilities.h
dep/glog/lib/: libglog.so.0.0.0
dep/mysql/include/mysql/: my_config.h  mysql_version.h
doc/: CMakeLists.txt
src/: CMakeLists.txt  Main.cpp  Master.cpp  Master.h  opCodes.cpp  opCodes.h  worldPacket.h  worldSession.cpp  worldSession.h  worldSocket.cpp  worldSocket.h  worldSocketMgr.cpp  worldSocketMgr.h
src/auth/: CMakeLists.txt  Main.cpp  Master.cpp  Master.h  authCode.h  authSocket.cpp  authSocket.h  authSocketMgr.cpp  authSocketMgr.h  serverList.cpp  serverList.h
src/component/: CMakeLists.txt
src/component/database/: DatabaseImpl.h  QueryNamedResult.h  QueryResultMysql.cpp  QueryResultMysql.h  SqlOperations.h  SqlPreparedStatement.h
src/component/network/: worldPacket.cpp  worldSocketMgr.cpp  worldSocketMgr.h
src/evil/: Main.cpp  Master.cpp  Master.h
src/evil/network/: worldSession.cpp  worldSocket.cpp  worldSocket.h  worldSocketMgr.cpp  worldSocketMgr.h
src/game/: CMakeLists.txt  Master.cpp  Master.h
src/game/network/: worldSession.h
src/platform/: platformDefine.h
src/share/: CMakeLists.txt  Common.h  CreationPolicy.h  Define.h  GameDef.h  ObjectLifeTime.cpp  PosixDaemon.cpp  PosixDaemon.h  Singleton.h  StackTrace.cpp  StackTrace.h  Threading.cpp  Threading.h  authCrypt.cpp  authCrypt.h  buffer.cpp  buffer.h  byteBuffer.cpp  byteBuffer.h  code.h  config.cpp  config.h  connector.cpp  connector.h  coroutine.h  eventMgr.cpp  eventMgr.h  glogHelper.cpp  glogHelper.h  nosql.cpp  nosql.h  opCodes.h  platformDefine.h
src/share/database/: Callback.h  Database.cpp  Database.h  DatabaseEnv.h  DatabaseImpl.h  DatabaseMysql.cpp  DatabaseMysql.h  Field.h  LockedQueue.h  QueryResultMysql.h  SqlDelayThread.cpp  SqlOperations.cpp  SqlOperations.h  SqlPreparedStatement.cpp
src/share/log/: glogHelper.cpp  glogHelper.h
src/share/policy/: CreationPolicy.h  ObjectLifeTime.cpp  ObjectLifeTime.h  Singleton.h  ThreadingModel.h
src/share/sql/: Callback.h  Database.cpp  Database.h  DatabaseMysql.h  QueryNamedResult.h  QueryResult.h  QueryResultMysql.cpp  SqlDelayThread.h  SqlOperations.h  SqlPreparedStatement.h
src/test/: README.txt  makefile  test.cpp  test_c10k_echo.cpp
src/undigested/: CallBack.cpp  CallBack.h
src/utilities/: Util.cpp  Util.h  byteConverter.h
tools/: init_install.py
win/: .gitignore  network_framework.sln
win/auth/: auth.vcxproj
win/share/: share.vcxproj  share.vcxproj.filters
