CMAKE_MINIMUM_REQUIRED(VERSION 3.4)

PROJECT(demo)

SET(EXECUTABLE_OUTPUT_PATH ./)

AUX_SOURCE_DIRECTORY(./ SRC_LIST)

SET(BOOST_INCLUDE_DIR ../dep/boost/include)

SET(BOOST_LIB_DIR ../dep/boost/lib)

SET(LIB_LIST boost_thread boost_system pthread)

ADD_DEFINITIONS( -g -W -Wall -std=c++11)

INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIR})
LINK_DIRECTORIES({${BOOST_LIB_DIR})

ADD_EXECUTABLE(demo ${SRC_LIST})

TARGET_LINK_LIBRARIES(demo ${LIB_LIST})
