AUX_SOURCE_DIRECTORY(./ LIB_SRC_LIST)
#AUX_SOURCE_DIRECTORY(./log LIB_SRC_LIST)
AUX_SOURCE_DIRECTORY(./database LIB_DB_LIST)
#AUX_SOURCE_DIRECTORY(./policy LIB_SRC_LIST)

# INCLUDE_DIRECTORIES(${GLOG_INCLUDE_DIR}  ${BOOST_INCLUDE_DIR} ${CRYPTOPP_INCLUDE_DIR} ${MYSQL_INCLUDE_DIR} ${HIREDIS_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${GLOG_INCLUDE_DIR}  ${BOOST_INCLUDE_DIR} ${CRYPTOPP_INCLUDE_DIR} ${MYSQL_INCLUDE_DIR} ${HIREDIS_INCLUDE_DIR} ${UTILITIES_INCLUDE_DIR} ${SHARE_INCLUDE_DIR})
# ${SHARE_INCLUDE_DIR} ${PLATFORM_INCLUDE_DIR} ${UTILITIES_INCLUDE_DIR})


SET(LIB_LIST boost_thread boost_system glog pthread cryptopp mysqlclient_r hiredis)

ADD_LIBRARY(share SHARED ${LIB_SRC_LIST})
ADD_LIBRARY(share_static STATIC ${LIB_SRC_LIST})
SET_TARGET_PROPERTIES(share_static PROPERTIES OUTPUT_NAME "share")

ADD_LIBRARY(database SHARED ${LIB_DB_LIST})
ADD_LIBRARY(database_static STATIC ${LIB_DB_LIST})
SET_TARGET_PROPERTIES(database_static PROPERTIES OUTPUT_NAME "database")

INSTALL(TARGETS share share_static database database_static
        LIBRARY DESTINATION network_framework/lib
        ARCHIVE DESTINATION network_framework/lib)
