AUX_SOURCE_DIRECTORY(./ LIB_SRC_LIST)

INCLUDE_DIRECTORIES(${GLOG_INCLUDE_DIR}  ${BOOST_INCLUDE_DIR} ${CRYPTOPP_INCLUDE_DIR} ${MYSQL_INCLUDE_DIR} ${HIREDIS_INCLUDE_DIR} ${SHARE_INCLUDE_DIR} ${NETWORK_INCLUDE_DIR})


SET(LIB_LIST boost_thread boost_system glog pthread cryptopp mysqlclient_r hiredis network)

ADD_LIBRARY(share SHARED ${LIB_SRC_LIST})
ADD_LIBRARY(share_static STATIC ${LIB_SRC_LIST})
SET_TARGET_PROPERTIES(share_static PROPERTIES OUTPUT_NAME "share")


INSTALL(TARGETS share share_static
        LIBRARY DESTINATION network_framework/lib
        ARCHIVE DESTINATION network_framework/lib)
